@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - eliminate remaining uses of List::MoreUtils
 
 0.093     2015-05-22 03:44:45Z
           - move kwalitee.t to xt/author
